cabal-version:      3.0

author:             Joshua Obritsch
bug-reports:        https://github.com/joshua-obritsch/blizzard-html/issues
build-type:         Simple
category:           Text
copyright:          2021 Joshua Obritsch
description:        An HTML generator. It functions mostly as a wrapper for
                    blaze-markup. The syntax was inspired by Elm. I'd
                    recommend using this with Tailwind CSS.
extra-source-files: CHANGELOG.md
homepage:           https://github.com/joshua-obritsch/blizzard-html
license:            MIT
license-file:       LICENSE
maintainer:         Joshua Obritsch <joshua@obritsch.com>
name:               blizzard-html
stability:          Experimental
synopsis:           An HTML generator for Haskell
version:            0.5.0.0


library
    build-depends:      base               >= 4    && <= 4.19
                      , text               >= 0.10 && <= 2.1
    default-language:   Haskell2010
    exposed-modules:    Css
                      , Html
                      , Html.Attributes
    other-modules:      Internal
    hs-source-dirs:     src
